<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".table"
    android:stretchColumns="1"

    >

    <TableRow
        android:layout_width="321dp"
        android:layout_height="238dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="152dp"
            android:layout_height="150dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/logo" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="5"
            android:text="@string/name"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urname"
            android:textColor="@color/abu"
            android:layout_marginRight="100dp"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urphone"
            android:textColor="@color/abu"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uraddress"
            android:textColor="@color/abu"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/button4"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:layout_marginLeft="120dp"
            />
    </TableRow>


</TableLayout>